[package]
name = "solana_game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
solana-sdk = "2.0.1"
solana-program = "2.0.1"
solana-client = "2.0.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }